manifests/deploy-scraper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - name: updater
        image: quay.io/rh-obulatov/triage@sha256:a2674d0c38be5a7b1f7c115101154d991f883e13aa45572910b9d1777d2098c2
        command:
        - /usr/bin/updater.sh
        resources:
          requests:
            memory: "1Gi"
            cpu: "2"
          limit:
            memory: "2Gi"
            cpu: "4"
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: tmp
          mountPath: /var/triage/tmp
        - name: cache
          mountPath: /var/triage/cache
        - name: output
          mountPath: /var/triage/output
      - name: server
        image: quay.io/rh-obulatov/triage@sha256:a2674d0c38be5a7b1f7c115101154d991f883e13aa45572910b9d1777d2098c2
        command:
        - /usr/bin/server.sh
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limit:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: output
          mountPath: /var/triage/output
      volumes:
      - name: tmp
        emptyDir: {}
      - name: cache
        persistentVolumeClaim:
          claimName: cache
      - name: output
        persistentVolumeClaim:
          claimName: output
