manifests/service-scraper.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper
spec:
  selector:
    app: scraper
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
