manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: triage
spec:
  subdomain: triage
  to:
    kind: Service
    name: triage
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
